[gd_scene load_steps=5 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scripts/ui/MainMenuManager.gd" id="1_menu"]
[ext_resource type="Theme" uid="uid://ui_theme" path="res://styles/UITheme.tres" id="2_theme"]

[sub_resource type="Gradient" id="Gradient_Purple"]
colors = PackedColorArray(0.05, 0.05, 0.1, 1, 0.15, 0.05, 0.25, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_Purple"]
gradient = SubResource("Gradient_Purple")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_menu")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.0666667, 0.0980392, 1)

[node name="GradientBG" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_Purple")

[node name="FloatingParticles" type="GPUParticles2D" parent="Background"]
position = Vector2(960, 1100)
amount = 50
process_material = null # User should set this to a basic upward drift
lifetime = 5.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Logo" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 72
text = "SHADOWRISE"
horizontal_alignment = 1

[node name="SubLogo" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 180.0
offset_right = 200.0
offset_bottom = 210.0
grow_horizontal = 2
text = "CHRONICLES OF THE VALLEY"
horizontal_alignment = 1

[node name="LoginPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/LoginPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="UsernameField" type="LineEdit" parent="CanvasLayer/LoginPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "PLAYER ID"
alignment = 1

[node name="PasswordField" type="LineEdit" parent="CanvasLayer/LoginPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "PASSWORD"
alignment = 1
secret = true

[node name="BtnLogin" type="Button" parent="CanvasLayer/LoginPanel/VBoxContainer"]
layout_mode = 2
text = "ENTER WORLD"

[node name="BtnRegister" type="Button" parent="CanvasLayer/LoginPanel/VBoxContainer"]
layout_mode = 2
text = "CREATE ACCOUNT"

[node name="SlotPanel" type="GridContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
columns = 3

[node name="ErrorLabel" type="Label" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "INVALID CREDENTIALS"
horizontal_alignment = 1
